--- a/Assignment 2/Latex1.bib
+++ b/Assignment 2/Latex1.bib
@@ -10,7 +10,7 @@ pages={15-27},
 keywords={Forward error correction;Long Term Evolution;Maintenance engineering;Multicast communication;Resource management;Static VAr compensators;Streaming media;DASH;LTE;convex optimization;eMBMS;multicasting}, 
 doi={10.1109/TVT.2018.2789899}, 
 ISSN={0018-9545}, 
-month={},
+month={January},
 }
 
 
