Final commit for assignment 1 and 2 and initial commit for assignment 3

--- a/Assignment 2/Latex1.bib
+++ b/Assignment 2/Latex1.bib
@@ -60,5 +60,5 @@ pages={64-82},
 keywords={Mobile networks; IP routing; Distributed protocol management; Wireless route optimization}, 
 doi={233.5490/TPS.2018.8700003}, 
 ISSN={4080-1873}, 
-month={February},
+month={},
 }
